# bazy-laboratorium-1

lab_sqlite/: CMakeLists.txt  Config.h  Memory.c  Memory.h  Record.h  RecordUtilities.c  RecordsUtilities.h  SQLiteDatabase.c  SQLiteDatabase.h  program1.c  program2.c  readme.txt
